ISPN-10426 ServerNG User Tool
* add user-tool.sh
* refactor Bootstrap class to have common base for all CLI tools
* add special Loader class to bootstrap the server without relying on huge command lines